Fixed title display bug, added new behavior
- fixed the bug where too long header titles would end up under the search
  box
- the title width is now calculated to fill out more available space
- isolated homepage where header title behaves differently

--- a/_sass/base/_grid-settings.scss
+++ b/_sass/base/_grid-settings.scss
@@ -11,6 +11,7 @@ $tiny-screen: em(360);
 $small-screen: em(480);
 $medium-screen: em(640);
 $large-screen: em(860);
+$desktop-screen: em(960);
 $x-large-screen: em(1100);
 $xx-large-screen: em(1400);
 $xxx-large-screen: em(1600);
